# trading_bot

./: .cursorrules  .dockerignore  .env.example  .gitignore  .hadolint.yaml  AGENT.md  AGENTS.md  COMPLACENCY_LOG.md  CONCLUSIONS.md  Cargo.toml  Dockerfile  HANDOFF.md  LATENCY_ISSUES_COMPREHENSIVE.md  LATENCY_ISSUES_UNIFIED_TABLE.md  NEWCOMERS.md  README.md  SYSTEM_SPEC_DOCUMENTATION_SUMMARY.md  TradingBotScript.py  docker-compose.yml  justfile  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_api.py  run_desktop_dashboard.bat  rust-toolchain.toml  setup.bat  setup.sh
apps/collector-kalshi/: Cargo.toml
apps/collector-kalshi/src/: main.rs
apps/collector-web/: Cargo.toml
apps/collector-web/src/: main.rs
apps/embedder/: Cargo.toml
apps/embedder/src/: main.rs
apps/mcp-server/: Cargo.toml
apps/mcp-server/src/: main.rs
apps/model-inference/: Dockerfile  pyproject.toml
apps/model-inference/app/: artifact_store.py  loader.py  main.py  schemas.py
apps/model-inference/app/predictors/: __init__.py  base.py  bundle.py  garch_predictor.py  lightgbm_predictor.py  lightgbm_q_predictor.py  llm_predictor.py  sklearn_predictor.py  sklearn_q_predictor.py  torch_predictor.py  xgboost_predictor.py  xgboost_q_predictor.py
apps/model-trainer/: Dockerfile  pyproject.toml
apps/model-trainer/app/: clickhouse.py  engine.py  ensemble.py  features.py  hpo.py  labelers.py  main.py  nats_client.py  schemas.py  scoring.py  worker.py
apps/model-trainer/app/adapters/: base.py  forecaster.py  garch_adapter.py  lightgbm_adapter.py  lightgbm_q_adapter.py  sklearn_adapter.py  sklearn_q_adapter.py  torch_adapter.py  xgboost_adapter.py  xgboost_q_adapter.py
apps/platform/: Cargo.toml
apps/platform/src/: bar_persist.rs  hot_path.rs  main.rs  pipeline_manager.rs  tee.rs
crates/api/: Cargo.toml
crates/api/src/: features_compute.rs  lib.rs  state.rs
crates/api/tests/: account_seed.rs  cred_crypto.rs  rollup.rs  venue_health.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: aggregate.rs  collect.rs  forecast.rs  gaps.rs  lib.rs  manager.rs  requirements.rs  rng.rs  sim.rs  sim_executor.rs  store.rs  suite.rs  types.rs  warmup.rs
crates/backtest/tests/: e2e.rs  funnel_e2e.rs  sealed_distributions.rs
crates/builders/: Cargo.toml
crates/builders/src/: bars.rs  lib.rs  orderbook.rs  watermark.rs
crates/collectors/: Cargo.toml
crates/collectors/src/: gap.rs  lib.rs  normalizer.rs  reconnect.rs
crates/collectors/tests/: kalshi_normalize.rs  oanda_normalize.rs  reddit_link.rs  scraper_compliance.rs  tradier_normalize.rs  tradovate_normalize.rs  zerox_normalize.rs
crates/demand-manager/: Cargo.toml
crates/demand-manager/src/: lane_key.rs  lib.rs  lifecycle.rs  rate_budget.rs  registry.rs
crates/demand-manager/tests/: demand_registry.rs  rate_budget.rs  refcount.rs
crates/domain/: Cargo.toml
crates/domain/src/: access.rs  data_type.rs  ensemble_def.rs  envelope.rs  error.rs  ids.rs  instrument.rs  interned.rs  lanes.rs  lib.rs  money.rs  order.rs  pipeline_def.rs  position.rs  timestamp.rs  trust.rs  venue.rs
crates/domain/tests/: envelope_roundtrip.rs  money_no_float.rs  strategy_def_schema.rs
crates/event-bus/: Cargo.toml
crates/event-bus/src/: backpressure.rs  lanes.rs  lib.rs  nats.rs  publish.rs  quarantine.rs  subjects.rs  subscribe.rs
crates/event-bus/tests/: subjects.rs
crates/execution/: Cargo.toml
crates/execution/src/: account_source.rs  alpaca.rs  audit.rs  broker.rs  coinbase.rs  events.rs  fills.rs  lib.rs  market_simulator.rs  mock_broker.rs  order_state.rs  positions.rs
crates/execution/tests/: account_adapters.rs  account_source.rs  ack_timeout_query.rs  idempotent_fills.rs  paper_accounts.rs  paper_clob.rs  paper_dispatch.rs  paper_simulators.rs  partial_fill.rs  venue_adapters.rs
crates/market-simulator-adapter/: Cargo.toml
crates/market-simulator-adapter/src/: contract.rs  export.rs  lib.rs  results.rs  run_request.rs
crates/market-simulator-adapter/tests/: backtest_adapter.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/mcp-server/tests/: integration.rs
crates/model-registry/: Cargo.toml
crates/model-registry/src/: backtest_bridge.rs  backtest_forecast.rs  data_view.rs  datasets.rs  ensemble_manager.rs  inference_gateway.rs  job.rs  leaderboard.rs  lib.rs  manager.rs  metrics.rs  nats_bridge.rs  pipeline_manager.rs  quality_monitor.rs  regression.rs  report.rs  scheduler.rs  scorecard.rs  sidecar.rs  spec_hash.rs  tags.rs  types.rs
crates/reconciliation/: Cargo.toml
crates/reconciliation/src/: divergence.rs  freshness.rs  lib.rs  positions.rs  sequence.rs
crates/reconciliation/tests/: freshness_respects_hours.rs  position_divergence_halts.rs
crates/risk/: Cargo.toml
crates/risk/src/: gate.rs  kill_switch.rs  lib.rs  limits.rs  overrides.rs  trust_gate.rs
crates/risk/tests/: cross_asset_parity.rs  equity_gate.rs  idempotent_gate.rs  kill_switch_trips.rs  tighten_only.rs
crates/storage/: Cargo.toml
crates/storage/src/: automation.rs  ledger.rs  lib.rs  pnl.rs  redis.rs  strategy_manifest.rs  writer.rs
crates/storage/tests/: automation_crud.rs  ledger_append.rs  ledger_writer.rs  pnl_engine.rs  pnl_schema.rs  registry_seed.rs
crates/strategy-runtime/: Cargo.toml
crates/strategy-runtime/fixtures/: default_ema.json
crates/strategy-runtime/src/: bytecode.rs  clock.rs  compatibility.rs  ids.rs  intents.rs  interpreter.rs  kind.rs  lib.rs  manifest.rs  registry.rs  runtime.rs  world.rs
crates/strategy-runtime/tests/: apply_list_filter.rs  cross_asset.rs  kind_inference.rs  manifest_compile.rs  no_wallclock.rs  pipeline_membership.rs  replay_determinism.rs  rising_edge.rs  v15_nodes.rs
crates/ui-gateway/: Cargo.toml
crates/ui-gateway/src/: lib.rs  nats_ws.rs  shaping.rs  snapshot.rs  subscriptions.rs  throttle.rs  transport.rs
crates/ui-gateway/tests/: subscription_authz.rs
crates/venue-router/: Cargo.toml
crates/venue-router/src/: exec_router.rs  lib.rs  lifecycle.rs  registry.rs  resolver.rs
crates/venue-router/tests/: exec_router.rs
(+1899 files in other folders)
