[workspace]
# v1.0.0 — Phase 7 complete: Python→Rust refactor done, all specs Implemented.
members = [
    "crates/domain",
    "crates/config",
    "crates/observability",
    "crates/event-bus",
    "crates/storage",
    "crates/builders",
    "crates/features",
    "crates/collectors",
    "crates/risk",
    "crates/execution",
    "crates/reconciliation",
    "crates/strategy-runtime",
    "crates/strategy-validator",
    "crates/demand-manager",
    "crates/venue-router",
    "crates/ui-gateway",
    "crates/backtest",
    "crates/api",
    "crates/mcp-server",
    "crates/graph",
    "crates/semantic",
    "apps/platform",
    "apps/collector-crypto",
    "apps/collector-equity",
    "apps/collector-fx",
    "apps/collector-kalshi",
    "apps/collector-options",
    "apps/collector-dex",
    "apps/collector-futures",
    "apps/collector-reddit",
    "apps/collector-web",
    "apps/embedder",
    "apps/mcp-server",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
# memory allocator
mimalloc = { version = "0.1", default-features = false }

# async runtime
tokio = { version = "1", features = ["full"] }

# web API / middleware
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout", "request-id"] }

# serialization / core types
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rust_decimal = { version = "1", features = ["serde-with-str", "db-postgres"] }
rust_decimal_macros = "1"

# databases / cache
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal", "migrate"] }
clickhouse = { version = "0.13", features = ["uuid"] }
redis = { version = "0.29", features = ["aio", "tokio-comp"] }

# event fabric
async-nats = "0.42"

# lock-free SPSC ring for in-process hot path
rtrb = "0.3"

# zero-copy binary serialization for hot-path events
rkyv = { version = "0.8", features = ["std"] }

# fast non-cryptographic hashing for intern table
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# lock-free concurrent hash map
dashmap = "6"

# small-size-optimized vec (avoids heap for short feature lists)
smallvec = { version = "1", features = ["union"] }

# external connectivity
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2", "gzip", "brotli"] }

# columnar analytics / archive storage
arrow = "55"
parquet = "55"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# config
config = "0.14"
toml = "0.8"

# error handling
thiserror = "2"
anyhow = "1"

# internal crates (path dependencies)
domain = { path = "crates/domain" }
storage = { path = "crates/storage" }
cfg = { path = "crates/config" }
observability = { path = "crates/observability" }
event-bus = { path = "crates/event-bus" }
builders = { path = "crates/builders" }
features = { path = "crates/features" }
collectors = { path = "crates/collectors" }
risk = { path = "crates/risk" }
execution = { path = "crates/execution" }
reconciliation = { path = "crates/reconciliation" }
strategy-runtime = { path = "crates/strategy-runtime" }
strategy-validator = { path = "crates/strategy-validator" }
demand-manager = { path = "crates/demand-manager" }
venue-router = { path = "crates/venue-router" }
ui-gateway = { path = "crates/ui-gateway" }
backtest = { path = "crates/backtest" }
api = { path = "crates/api" }
mcp-server-lib = { path = "crates/mcp-server" }
graph = { path = "crates/graph" }
semantic = { path = "crates/semantic" }

# ── market_simulator SDK (external, pinned git dependency) ───────────────────
# The backtesting engine lives in its own repository and is consumed only
# through its frozen `sdk` surface (see crates/backtest).  All three crates are
# pinned to a single git revision so Cargo resolves one unified copy — pinning
# different revs would build two incompatible nautilus trees.
#
# The rev below is the SDK commit on market_simulator
# (`Add embeddable bar-simulation SDK for external host applications`).  When an
# `sdk-vX.Y.Z` tag is published on market_simulator, swap `rev = "…"` for
# `tag = "sdk-vX.Y.Z"` here in this one place.
nautilus-backtest = { git = "https://github.com/MHughesDev/market_simulator", rev = "f915b050cc6a4284b5a6f6e327a46cd926714df4" }
nautilus-model = { git = "https://github.com/MHughesDev/market_simulator", rev = "f915b050cc6a4284b5a6f6e327a46cd926714df4" }
nautilus-core = { git = "https://github.com/MHughesDev/market_simulator", rev = "f915b050cc6a4284b5a6f6e327a46cd926714df4" }

# ── Local dual-development of trading_bot + market_simulator ──────────────────
# To hack on both repos at once, clone market_simulator beside trading_bot and
# uncomment the patch below; Cargo will then build the SDK from your local
# checkout without touching the pinned `rev` above.  Keep this commented in CI
# and on `main` so builds stay reproducible.
#
# [patch."https://github.com/MHughesDev/market_simulator"]
# nautilus-backtest = { path = "../market_simulator/crates/backtest" }
# nautilus-model    = { path = "../market_simulator/crates/model" }
# nautilus-core     = { path = "../market_simulator/crates/core" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = false
debug = 1

[profile.dev]
opt-level = 0
debug = true
