[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
description = "Trading Bot — Kraken market data, Alpaca paper / Coinbase live execution, AI trading pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "websockets>=12.0",
  "httpx>=0.27",
  "requests>=2.33.0",
  "pyyaml>=6.0",
  "polars>=1.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "redis>=5.0",
  "qdrant-client>=1.9",
  "psycopg[binary]>=3.1",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "prometheus-client>=0.21",
  "structlog>=24.0",
  "coinbase-advanced-py>=1.8.0",
  "joblib>=1.4",
  "argon2-cffi>=23.1",
  "cryptography>=42.0",
  "jwcrypto>=1.5.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.4", "pyinstaller>=6.0", "pip-audit>=2.6", "bandit[toml]>=1.7"]
alpaca = ["alpaca-py~=0.21"]
mcp = ["mcp>=1.2"]
dashboard = ["streamlit>=1.39", "httpx>=0.27", "pywebview>=5.0", "plotly>=5.18", "pandas>=2.2"]
orchestration = ["prefect>=3.0", "mlflow>=2.16"]
# Decoupled AI-model training pipelines (FB-AP-XXX). Lives in the `training_pipeline` package and
# is NOT part of the runtime; intended to migrate to a standalone training repo/dependency.
training = ["prefect>=3.0", "mlflow>=2.16", "torch~=2.2"]
# Strategy backtesting engine (FB-AP-XXX). Sourced ONLY from the platform's own fork of
# NautilusTrader (https://github.com/MHughesDev/market_simulator) — never the PyPI mainline —
# so the engine stays coupled to the fork the user controls. The fork is currently an unmodified
# mirror, so the import package name is still `nautilus_trader`; pin a tag/commit below for
# reproducibility once the fork starts to diverge. Installs via `pip install -e ".[backtest_nautilus]"`.
# NOTE: building the fork from source needs a Rust toolchain (the PyPI mainline ships prebuilt
# wheels; a source checkout does not), so first-time install compiles the Rust/Cython core.
backtest_nautilus = [
  "nautilus_trader @ git+https://github.com/MHughesDev/market_simulator.git",
]
# CUDA: install a torch build with CUDA for your platform; use NM_MODELS_TORCH_DEVICE=auto|cpu|cuda|cuda:N
models_torch = ["torch~=2.2"]
sentiment_nlp = ["transformers>=4.40", "torch>=2.2"]
all = [
  "streamlit>=1.39",
  "prefect>=3.0",
  "mlflow>=2.16",
  "torch>=2.2",
  "transformers>=4.40",
]

[project.scripts]
tb-train-forecaster-distill = "training_pipeline.forecaster_training.distill_mlp:main"
trading-bot-desktop = "operator_packaging.desktop_app.launcher:main"
tb-install-desktop-shortcut = "operator_packaging.desktop_app.shortcuts:main"

[tool.setuptools.package-data]
"app" = ["config/*.yaml"]
"operator_packaging" = ["desktop_app/assets/*.svg"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "scripts*",
  "app*",
  "services*",
  "shared*",
  "mcp_server*",
  "data_plane*",
  "execution*",
  "models*",
  "risk_engine*",
  "backtesting*",
  "control_plane*",
  "orchestration*",
  "training_pipeline*",
  "strategies*",
  "observability*",
  "legacy*",
  "operator_packaging*",
  "carry_sleeve*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests", "legacy", "build", "dist"]
skips = ["B101"]

[tool.bandit.assert_used]
exclude = ["tests/"]
