[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
cfg = { workspace = true }
observability = { workspace = true }
mcp-server-lib = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
