[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "model-trainer"
version = "0.1.0"
description = "AI Model Studio training sidecar"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "nats-py>=2.6",
    "boto3>=1.34",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "joblib>=1.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
