[package]
name = "backtest"
version = "0.1.0"
edition = "2021"

# Backtesting orchestrator — connects the trading bot to the market_simulator
# engine (NautilusTrader fork) used strictly as an embedded SDK.
#
# The nautilus-* dependencies are pinned git dependencies on the standalone
# MHughesDev/market_simulator repository (see the root Cargo.toml
# `[workspace.dependencies]`).  There is no sibling-checkout requirement; a
# fresh `trading_bot` clone builds purely from the pinned revision.  To develop
# both repos together, see the commented `[patch]` block in the root manifest.
#
# The simulator never owns data: bars are loaded from this platform's
# ClickHouse store, handed to the engine in memory, and dropped when the
# run finishes.

[dependencies]
domain = { workspace = true }
features = { workspace = true }
strategy-runtime = { workspace = true }
storage = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
clickhouse = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }

# Market simulator SDK — pinned git dependency on the standalone repo, consumed
# only through its frozen `sdk` surface (see the root `[workspace.dependencies]`).
nautilus-backtest = { workspace = true }
nautilus-model = { workspace = true }
nautilus-core = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }

[lints]
workspace = true
