[package]
name = "collectors"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
event-bus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
futures-util = "0.3"
rust_decimal = { workspace = true }
rtrb = { workspace = true }
rkyv = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
