[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
rkyv = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
