[package]
name = "event-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
