[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
risk = { workspace = true }
storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
rust_decimal_macros = { workspace = true }
risk = { workspace = true, features = ["test-helpers"] }
