[package]
name = "market-simulator-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
storage = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
