[package]
name = "model-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
storage = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
