[package]
name = "model-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
storage = { workspace = true }
features = { workspace = true }
backtest = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-nats = { workspace = true }
futures-util = "0.3"
sha2 = "0.10"
rust_decimal = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
bytes = "1"

[lints]
workspace = true
