[package]
name = "reconciliation"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
risk = { workspace = true }
execution = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
