[package]
name = "risk"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[features]
test-helpers = []

[dev-dependencies]
tokio = { workspace = true }
