[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
clickhouse = { workspace = true }
redis = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
