[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
clickhouse = { workspace = true }
redis = { workspace = true }
ahash = "0.8"
arrow = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
xxhash-rust = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
strategy-runtime = { workspace = true }
