[package]
name = "strategy-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
builders = { workspace = true }
risk = { workspace = true }
features = { workspace = true }
demand-manager = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
reconciliation = { workspace = true }
