[package]
name = "ui-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
demand-manager = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
